--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dla Oliwki 💖</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="/src/srcindex.css" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.js"></script>
+
+    <!-- JS ENTRY -->
+    <script type="module" src="/src/index-mine.js"></script>
   </body>
 </html>
