--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Dla Oliwki 💖</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/src/srcindex.css" />
+    <link rel="stylesheet" href="/srcindex.css">
   </head>
   <body>
     <div id="root"></div>
 
     <!-- JS ENTRY -->
-    <script type="module" src="/src/index-mine.js"></script>
+    <script src="/index-mine.js"></script>
   </body>
 </html>
